# syntra-experiment

./: README.md  fetch_workload.sh  figure4.py  figure4.sh  make_barcode.py  table1.py  table1.sh
AlphaRTC/playground/: plot_bwe.py  receiver.json  sender.json
alfalfa/: configure.ac
alfalfa/src/: Makefile.am
alfalfa/src/cong_ctrl/: Makefile.am  cong_ctrl.cc  cong_ctrl.hh
alfalfa/src/fast-ctrl/: slow_conv.cc  slow_conv.hh  slow_conv_manual.cc  slow_conv_manual.hh
alfalfa/src/fast-fec/: reed_solomon.cc  reed_solomon.hpp
alfalfa/src/fec/: Makefile.am  reed_solomon.cc  schifra_error_processes.hpp  schifra_galois_field.hpp  schifra_reed_solomon_block.hpp  schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_encoder.hpp
alfalfa/src/frontend/: Makefile.am
alfalfa/src/net/: pacer.hh  packet.cc  packet.hh
alfalfa/src/salsify/: Makefile.am  adaptive_stream.hh  concurrent_queue.hh  fake-webcam.cc  ivfcompare.cc  micro-fix.py  micro-jitter.py  receiver.cc  salsify-delay.py  salsify-experiment.sh  salsify-quality.py  salsify-rate.py  salsify-receiver.cc  salsify-sender.cc  syntra-20-experiment.sh  syntra-delay.py  syntra-experiment.sh  syntra-quality.py  syntra-rate.py  syntra-trace-experiment.sh  thread_pool.hh
gcc/playground/: calculate_ssim.py  gcc-experiment.sh  update_config.py  webrtc-quality.py
gcc/playground/example-scripts/: e2e_delay.py
minimax/: .gitignore  Cargo.toml  README.md  analyse_tree.py  cca_analyzer.py  debug_tree.py  plot_sim.py  sim_all.sh  util.py
minimax/abr_common/: Cargo.toml
minimax/abr_common/src/: lib.rs
minimax/cc_common/: Cargo.toml
minimax/cc_common/src/: lib.rs
minimax/ds/: Cargo.toml
minimax/ds/src/: interval.rs  lib.rs  my_f64.rs  tree.rs
minimax/minimax/: Cargo.toml
minimax/minimax/src/: adaptive_bitrate.rs  chess.rs  chess_uci.rs  cong_ctrl.rs  lib.rs  tictactoe.rs
minimax/network_model_c/: Cargo.toml
minimax/network_model_c/src/: lib.rs
minimax/network_model_nc/: Cargo.toml
minimax/network_model_nc/src/: lib.rs
minimax/network_model_nc_qe_output/: Cargo.toml
minimax/network_model_nc_qe_output/src/: lib.rs
minimax/network_model_z3/: Cargo.toml  feasible-5.smt2  feasible-6.smt2  feasible-8.smt2
minimax/network_model_z3/src/: lib.rs
minimax/network_model_z3/src/scratch/: lifetime_coercion.rs  own_ctx_solver.rs  parse_ast.rs
minimax/outputs/archive/obj-beliefs_ld_s_qdel/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/archive/obj-beliefs_s_qdel_ld/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/archive/obj-beliefs_s_qdel_ld-rerun/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/archive/obj-ld_s_qdel_beliefs/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/archive/obj-ld_s_qdel_beliefs-clamped/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/archive/obj-ld_s_qdel_beliefs-clamped-rerun/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/binary-search-nm/debug-tree/: test.csv
minimax/outputs/binary-search-nm/obj-beliefs_ld_s_qdel/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/binary-search-nm/obj-beliefs_ld_s_qdel-maxc_mincby2/: cbrd_deep.csv  cbrd_shallow.csv  ideal_deep.csv  ideal_shallow.csv
minimax/outputs/binary-search-nm/obj_sc_ld_qdel_s_sb_c_b/: net_cbrd_c20_b10.csv  net_cbrd_c20_b100.csv  net_ideal_c20_b10.csv  net_ideal_c20_b100.csv
minimax/outputs/binary-search-nm/obj_sc_scladd_sclmul_ld_qdel_c_s_sb_b_schmul_schadd/: net_cbrd_c20_b10.csv  net_cbrd_c20_b100.csv  net_ideal_c20_b10.csv  net_ideal_c20_b100.csv
minimax/outputs/binary-search-nm/obj_smcmul_smcadd_sc_ld_qdel_s_sb_c_b/: net_cbrd_c20_b10.csv  net_cbrd_c20_b100.csv  net_ideal_c20_b10.csv  net_ideal_c20_b100.csv
minimax/outputs/binary-search-nm/obj_ttsc_ld_qdel_c_s_sb_b_sc_sclmul_scladd_schmul_schadd/: net_cbrd_c20_b10.csv  net_cbrd_c20_b100.csv  net_ideal_c20_b10.csv  net_ideal_c20_b100.csv
minimax/outputs/binary-search-nm/obj_ttsc_ld_qdel_c_s_sb_b_sc_sclmul_scladd_schmul_schadd-need-to-break-in-ttsc/: net_cbrd_c20_b10.csv  net_cbrd_c20_b100.csv  net_ideal_c20_b10.csv  net_ideal_c20_b100.csv
qe/: contracts.py  get_unsat_core.py
qe/outputs/beliefs/: T=3-anyBDP-only_Ld.txt  T=3-anyBDP-only_qdel-arbit_init_qdel.txt  T=3-anyBDP-qdel-simplify.txt  T=3-anyBDP-qdel.txt  T=3-anyBDP-qdel_Ld-arbit_init_qdel-projectionC.txt  T=3-anyBDP-qdel_Ld-arbit_init_qdel.txt  T=3-anyBDP.txt  T=3-largeBDP-only_Ld.txt  T=3-largeBDP.txt  T=3-reasonableBDP-qdel_Ld-upper_lower-delA_geq_a-projectC.txt  T=4-anyBDP-only_Ld-upper_lower-delA_geq_a.txt  T=4-anyBDP.txt  T=4-largeBDP.txt  T=4-reasonableBDP-only_Ld-upper_lower-delA_geq_a.txt  T=4-reasonableBDP-only_qdel-upper_lower-delA_geq_a-projection.txt  T=4-reasonableBDP-only_qdel-upper_lower-delA_geq_a.txt  T=4-reasonableBDP-qdel_Ld-upper_lower-delA_geq_a-projection.txt  T=4-reasonableBDP-qdel_Ld-upper_lower-delA_geq_a.txt
qe/outputs/qe/cbrdelay_l0/: T=5,eliminate=[I_0,I_1,I_2,I_3,I_4,L_2,L_3,L_4,lhs=L_1],pl=1.smt2  lib.rs  (+34 more)
qe/qe/: aimd_multi_sim.py  assumption.py  belief.py  check_minimax_actions.py  debug_model.py  dnf.py  ecnvdelay.py  feasible.py  feasible_observations.py  main.py  opt_action.py  print_feasible.py  scratch.py  system_identification.py  test_aimd_multi.py  transition_system.py  util.py
qe/qe/archive/: convexity.ipynb
qe/qe/environment/: __init__.py  base.py  cbr_delay.py  cbr_delay_nc.py  ccac.py  ideal.py
qe/qe/netcal/: belief.py  debug.py  debug_q.py  qe_queries.py  trace.py  transpile.py
traces/: fixed-link  real-jitter  varying-link
vegas/api/test/: create_frame_generator.cc  create_frame_generator.h
vegas/playground/: receiver.json  sender.json  update_config.py  vegas-experiment.sh  webrtc-quality.py  webrtc-rate.py
vegas/playground/example-scripts/: e2e_delay.py
vegas/test/: frame_generator.cc  frame_generator.h
vegas/test/testsupport/: video_frame_writer.cc
(+2266 files in other folders)
