[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.192", features=["derive", "rc"]}
serde_json = "1.0.108"
num-rational = "0.4.1"
num-traits = "0.2.15"
num-integer = "0.1.45"
# num = "0.4.1"