[package]
name = "minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# shakmaty = "0.23.0"
# simple_logger = "4.2.0"
# time = "0.3.30"
# rayon = "1.8.0"

circular-buffer = "0.1.3"
log = "0.4.20"
env_logger = "0.10.0"
itertools = "0.11.0"
num-traits = "0.2.15"
clap = {version="4.4.7", features=["derive"]}
csv = "1.3.0"
serde = {version="1.0.192", features=["derive", "rc"]}
serde_json = "1.0.108"
lazy_static = "1.4.0"

# z3 = {git = "https://github.com/prove-rs/z3.rs.git"}
ds = {path = "../ds"}
cc_common = {path = "../cc_common"}
abr_common = {path = "../abr_common"}
network_model_nc = {path = "../network_model_nc"}
# network_model_z3 = {path = "../network_model_z3"}

[lib]
name = "minimax"
path = "src/lib.rs"

# [[bin]]
# name = "tictactoe"
# path = "src/tictactoe.rs"
#
# [[bin]]
# name = "chess"
# path = "src/chess.rs"
#
# [[bin]]
# name = "chess_uci"
# path = "src/chess_uci.rs"

[[bin]]
name = "cc"
path = "src/cong_ctrl.rs"

[[bin]]
name = "abr"
path = "src/adaptive_bitrate.rs"