[package]
name = "network_model_c"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
itertools = "0.11.0"
num-traits = "0.2.15"
serde = {version="1.0.192", features=["derive", "rc"]}
serde_json = "1.0.108"
lazy_static = "1.4.0"

ds = {path = "../ds"}
cc_common = {path = "../cc_common"}
network_model_nc = {path = "../network_model_nc"}

[profile.release]
panic = "unwind"

[lib]
name = "network_model_lib"
crate-type = ["staticlib"]
