[package]
name = "network_model_nc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
itertools = "0.11.0"
num-traits = "0.2.15"
serde = {version="1.0.192", features=["derive", "rc"]}
serde_json = "1.0.108"
lazy_static = "1.4.0"

ds = {path = "../ds"}
cc_common = {path = "../cc_common"}
network_model_nc_qe_output = {path = "../network_model_nc_qe_output"}
