[package]
name = "network_model_z3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# z3 = {version="0.12", features = ["static-link-z3"]}
# z3 = {path = "../z3.rs/z3"}
# z3-sys = {path = "../z3.rs/z3-sys"}

z3 = {git = "https://github.com/prove-rs/z3.rs.git"}
polars = "0.34.2"
num-traits = "0.2.15"
serde = {version="1.0.192", features=["derive", "rc"]}
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.0"

ds = {path = "../ds"}
cc_common = {path = "../cc_common"}
